# applespi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  notes.md  pyproject.toml
doc/: logging-subsystem-categories.txt
include/applespi/: apfs_spi.h  applespi.h  commpage_spi.h
include/applespi/detail/: consed_cstr.h  cwisstable.h
junk/: exc-syscall.c  ipc-poc.c  mach-message-receiver.c  mach-test.c  mysleep.c  raw-mach-message-example.c  self-lsmp.c  simple-example-with-signals.c  spin-sleep.c  strpool.h  vm-dump.c  wait-test.c
lib/: CMakeLists.txt
lib/applespi/: CMakeLists.txt  applespi-dummy.c  applespi_dummy.cpp
lib/applespi-hpy/: CMakeLists.txt  applespi-hpy.c
python/src/applespi/tools/: applespi_util.py
tools/: CMakeLists.txt
tools/applespi-commpage-dump/: CMakeLists.txt  applespi-commpage-dump.c
tools/applespi-commpage-util/: CMakeLists.txt  applespi-commpage-util.c
tools/applespi-firmlinks-util/: CMakeLists.txt  applespi-firmlinks-util.c
tools/applespi-log/: CMakeLists.txt  applespi-log.c
tools/applespi-time-info/: CMakeLists.txt  applespi-time-info.c
